add personal picture

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ernesto Salgado, Senior Backend Engineer
-logo: /assets/img/meme.gif
+logo: /assets/img/ess.png
 description: Ernesto Salgado Suárez, Senior Backend Engineer.
 show_downloads: false
 remote_theme: pages-themes/minimal@v0.2.0
